sj6re/src/turtle.output
Terminals unused in grammar

   REPEAT
   BEG_LIST
   END_LIST
   COMMA
   LOGIC_OP
   KEYWORD
   PARAM


State 108 conflicts: 12 reduce/reduce
State 109 conflicts: 12 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: head decllist stmtlist tail

    2 head: /* empty */

    3 tail: /* empty */

    4 decllist: /* empty */
    5         | decllist decl

    6 decl: VAR ID SEMICOLON

    7 stmtlist: /* empty */
    8         | stmtlist stmt

    9 stmt: ID ASSIGN expr SEMICOLON
   10     | GO expr SEMICOLON
   11     | JUMP expr SEMICOLON
   12     | TURN expr SEMICOLON

   13 $@1: /* empty */

   14 stmt: FOR ID ASSIGN expr STEP expr TO expr DO $@1 stmt
   15     | COPEN stmtlist CCLOSE
   16     | IF OPEN catomic CLOSE then exec_array
   17     | IF OPEN catomic CLOSE then exec_array ELSE exec_array

   18 then: THEN
   19     | /* empty */

   20 stmt: exec_array

   21 $@2: /* empty */

   22 $@3: /* empty */

   23 stmt: WHILE $@2 OPEN catomic CLOSE $@3 exec_array

   24 $@4: /* empty */

   25 stmt: PROCEDURE ID $@4 exec_array
   26     | proc_call

   27 expr: expr PLUS term
   28     | expr MINUS term
   29     | term

   30 term: term TIMES factor
   31     | term DIV factor
   32     | factor

   33 factor: MINUS atomic
   34       | PLUS atomic
   35       | SIN factor
   36       | COS factor
   37       | SQRT factor
   38       | atomic

   39 atomic: OPEN expr CLOSE
   40       | NUMBER
   41       | FLOAT
   42       | ID

   43 condition: expr COMP_OP_lt expr
   44          | expr COMP_OP_le expr
   45          | expr COMP_OP_gt expr
   46          | expr COMP_OP_ge expr
   47          | expr COMP_OP_ne expr
   48          | expr COMP_OP_eq expr

   49 catomic: OPEN condition CLOSE
   50        | condition

   51 exec_array: beg_block stmtlist end_block

   52 beg_block: BEG_BLOCK

   53 end_block: END_BLOCK

   54 proc_call: CALL ID proc_list SEMICOLON

   55 proc_list: /* empty */
   56          | expr proc_list


Terminals, with rules where they appear

$end (0) 0
error (256)
GO (258) 10
TURN (259) 12
VAR (260) 6
JUMP (261) 11
FOR (262) 14
STEP (263) 14
TO (264) 14
DO (265) 14
COPEN (266) 15
CCLOSE (267) 15
SIN (268) 35
COS (269) 36
SQRT (270) 37
FLOAT (271) 41
ID (272) 6 9 14 25 42 54
NUMBER (273) 40
SEMICOLON (274) 6 9 10 11 12 54
PLUS (275) 27 34
MINUS (276) 28 33
TIMES (277) 30
DIV (278) 31
OPEN (279) 16 17 23 39 49
CLOSE (280) 16 17 23 39 49
ASSIGN (281) 9 14
REPEAT (282)
WHILE (283) 23
PROCEDURE (284) 25
IF (285) 16 17
THEN (286) 18
ELSE (287) 17
COMP_OP_lt (288) 43
COMP_OP_le (289) 44
COMP_OP_gt (290) 45
COMP_OP_ge (291) 46
COMP_OP_ne (292) 47
COMP_OP_eq (293) 48
BEG_BLOCK (294) 52
END_BLOCK (295) 53
BEG_LIST (296)
END_LIST (297)
COMMA (298)
LOGIC_OP (299)
KEYWORD (300)
PARAM (301)
CALL (302) 54


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
head (50)
    on left: 2, on right: 1
tail (51)
    on left: 3, on right: 1
decllist (52)
    on left: 4 5, on right: 1 5
decl (53)
    on left: 6, on right: 5
stmtlist (54)
    on left: 7 8, on right: 1 8 15 51
stmt (55)
    on left: 9 10 11 12 14 15 16 17 20 23 25 26, on right: 8 14
$@1 (56)
    on left: 13, on right: 14
then (57)
    on left: 18 19, on right: 16 17
$@2 (58)
    on left: 21, on right: 23
$@3 (59)
    on left: 22, on right: 23
$@4 (60)
    on left: 24, on right: 25
expr (61)
    on left: 27 28 29, on right: 9 10 11 12 14 27 28 39 43 44 45 46
    47 48 56
term (62)
    on left: 30 31 32, on right: 27 28 29 30 31
factor (63)
    on left: 33 34 35 36 37 38, on right: 30 31 32 35 36 37
atomic (64)
    on left: 39 40 41 42, on right: 33 34 38
condition (65)
    on left: 43 44 45 46 47 48, on right: 49 50
catomic (66)
    on left: 49 50, on right: 16 17 23
exec_array (67)
    on left: 51, on right: 16 17 20 23 25
beg_block (68)
    on left: 52, on right: 51
end_block (69)
    on left: 53, on right: 51
proc_call (70)
    on left: 54, on right: 26
proc_list (71)
    on left: 55 56, on right: 54 56


state 0

    0 $accept: . program $end
    1 program: . head decllist stmtlist tail
    2 head: .

    $default  reduce using rule 2 (head)

    program  go to state 1
    head     go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: head . decllist stmtlist tail
    4 decllist: .
    5         | . decllist decl

    $default  reduce using rule 4 (decllist)

    decllist  go to state 4


state 3

    0 $accept: program $end .

    $default  accept


state 4

    1 program: head decllist . stmtlist tail
    5 decllist: decllist . decl
    6 decl: . VAR ID SEMICOLON
    7 stmtlist: .  [$end, GO, TURN, JUMP, FOR, COPEN, ID, WHILE, PROCEDURE, IF, BEG_BLOCK, CALL]
    8         | . stmtlist stmt

    VAR  shift, and go to state 5

    $default  reduce using rule 7 (stmtlist)

    decl      go to state 6
    stmtlist  go to state 7


state 5

    6 decl: VAR . ID SEMICOLON

    ID  shift, and go to state 8


state 6

    5 decllist: decllist decl .

    $default  reduce using rule 5 (decllist)


state 7

    1 program: head decllist stmtlist . tail
    3 tail: .  [$end]
    8 stmtlist: stmtlist . stmt
    9 stmt: . ID ASSIGN expr SEMICOLON
   10     | . GO expr SEMICOLON
   11     | . JUMP expr SEMICOLON
   12     | . TURN expr SEMICOLON
   14     | . FOR ID ASSIGN expr STEP expr TO expr DO $@1 stmt
   15     | . COPEN stmtlist CCLOSE
   16     | . IF OPEN catomic CLOSE then exec_array
   17     | . IF OPEN catomic CLOSE then exec_array ELSE exec_array
   20     | . exec_array
   23     | . WHILE $@2 OPEN catomic CLOSE $@3 exec_array
   25     | . PROCEDURE ID $@4 exec_array
   26     | . proc_call
   51 exec_array: . beg_block stmtlist end_block
   52 beg_block: . BEG_BLOCK
   54 proc_call: . CALL ID proc_list SEMICOLON

    GO         shift, and go to state 9
    TURN       shift, and go to state 10
    JUMP       shift, and go to state 11
    FOR        shift, and go to state 12
    COPEN      shift, and go to state 13
    ID         shift, and go to state 14
    WHILE      shift, and go to state 15
    PROCEDURE  shift, and go to state 16
    IF         shift, and go to state 17
    BEG_BLOCK  shift, and go to state 18
    CALL       shift, and go to state 19

    $default  reduce using rule 3 (tail)

    tail        go to state 20
    stmt        go to state 21
    exec_array  go to state 22
    beg_block   go to state 23
    proc_call   go to state 24


state 8

    6 decl: VAR ID . SEMICOLON

    SEMICOLON  shift, and go to state 25


state 9

   10 stmt: GO . expr SEMICOLON
   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    expr    go to state 35
    term    go to state 36
    factor  go to state 37
    atomic  go to state 38


state 10

   12 stmt: TURN . expr SEMICOLON
   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    expr    go to state 39
    term    go to state 36
    factor  go to state 37
    atomic  go to state 38


state 11

   11 stmt: JUMP . expr SEMICOLON
   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    expr    go to state 40
    term    go to state 36
    factor  go to state 37
    atomic  go to state 38


state 12

   14 stmt: FOR . ID ASSIGN expr STEP expr TO expr DO $@1 stmt

    ID  shift, and go to state 41


state 13

    7 stmtlist: .
    8         | . stmtlist stmt
   15 stmt: COPEN . stmtlist CCLOSE

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 42


state 14

    9 stmt: ID . ASSIGN expr SEMICOLON

    ASSIGN  shift, and go to state 43


state 15

   21 $@2: .
   23 stmt: WHILE . $@2 OPEN catomic CLOSE $@3 exec_array

    $default  reduce using rule 21 ($@2)

    $@2  go to state 44


state 16

   25 stmt: PROCEDURE . ID $@4 exec_array

    ID  shift, and go to state 45


state 17

   16 stmt: IF . OPEN catomic CLOSE then exec_array
   17     | IF . OPEN catomic CLOSE then exec_array ELSE exec_array

    OPEN  shift, and go to state 46


state 18

   52 beg_block: BEG_BLOCK .

    $default  reduce using rule 52 (beg_block)


state 19

   54 proc_call: CALL . ID proc_list SEMICOLON

    ID  shift, and go to state 47


state 20

    1 program: head decllist stmtlist tail .

    $default  reduce using rule 1 (program)


state 21

    8 stmtlist: stmtlist stmt .

    $default  reduce using rule 8 (stmtlist)


state 22

   20 stmt: exec_array .

    $default  reduce using rule 20 (stmt)


state 23

    7 stmtlist: .
    8         | . stmtlist stmt
   51 exec_array: beg_block . stmtlist end_block

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 48


state 24

   26 stmt: proc_call .

    $default  reduce using rule 26 (stmt)


state 25

    6 decl: VAR ID SEMICOLON .

    $default  reduce using rule 6 (decl)


state 26

   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   35       | SIN . factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    factor  go to state 49
    atomic  go to state 38


state 27

   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   36       | COS . factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    factor  go to state 50
    atomic  go to state 38


state 28

   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   37       | SQRT . factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    factor  go to state 51
    atomic  go to state 38


state 29

   41 atomic: FLOAT .

    $default  reduce using rule 41 (atomic)


state 30

   42 atomic: ID .

    $default  reduce using rule 42 (atomic)


state 31

   40 atomic: NUMBER .

    $default  reduce using rule 40 (atomic)


state 32

   34 factor: PLUS . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    OPEN    shift, and go to state 34

    atomic  go to state 52


state 33

   33 factor: MINUS . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    OPEN    shift, and go to state 34

    atomic  go to state 53


state 34

   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   39       | OPEN . expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    expr    go to state 54
    term    go to state 36
    factor  go to state 37
    atomic  go to state 38


state 35

   10 stmt: GO expr . SEMICOLON
   27 expr: expr . PLUS term
   28     | expr . MINUS term

    SEMICOLON  shift, and go to state 55
    PLUS       shift, and go to state 56
    MINUS      shift, and go to state 57


state 36

   29 expr: term .  [STEP, TO, DO, SIN, COS, SQRT, FLOAT, ID, NUMBER, SEMICOLON, PLUS, MINUS, OPEN, CLOSE, COMP_OP_lt, COMP_OP_le, COMP_OP_gt, COMP_OP_ge, COMP_OP_ne, COMP_OP_eq]
   30 term: term . TIMES factor
   31     | term . DIV factor

    TIMES  shift, and go to state 58
    DIV    shift, and go to state 59

    $default  reduce using rule 29 (expr)


state 37

   32 term: factor .

    $default  reduce using rule 32 (term)


state 38

   38 factor: atomic .

    $default  reduce using rule 38 (factor)


state 39

   12 stmt: TURN expr . SEMICOLON
   27 expr: expr . PLUS term
   28     | expr . MINUS term

    SEMICOLON  shift, and go to state 60
    PLUS       shift, and go to state 56
    MINUS      shift, and go to state 57


state 40

   11 stmt: JUMP expr . SEMICOLON
   27 expr: expr . PLUS term
   28     | expr . MINUS term

    SEMICOLON  shift, and go to state 61
    PLUS       shift, and go to state 56
    MINUS      shift, and go to state 57


state 41

   14 stmt: FOR ID . ASSIGN expr STEP expr TO expr DO $@1 stmt

    ASSIGN  shift, and go to state 62


state 42

    8 stmtlist: stmtlist . stmt
    9 stmt: . ID ASSIGN expr SEMICOLON
   10     | . GO expr SEMICOLON
   11     | . JUMP expr SEMICOLON
   12     | . TURN expr SEMICOLON
   14     | . FOR ID ASSIGN expr STEP expr TO expr DO $@1 stmt
   15     | . COPEN stmtlist CCLOSE
   15     | COPEN stmtlist . CCLOSE
   16     | . IF OPEN catomic CLOSE then exec_array
   17     | . IF OPEN catomic CLOSE then exec_array ELSE exec_array
   20     | . exec_array
   23     | . WHILE $@2 OPEN catomic CLOSE $@3 exec_array
   25     | . PROCEDURE ID $@4 exec_array
   26     | . proc_call
   51 exec_array: . beg_block stmtlist end_block
   52 beg_block: . BEG_BLOCK
   54 proc_call: . CALL ID proc_list SEMICOLON

    GO         shift, and go to state 9
    TURN       shift, and go to state 10
    JUMP       shift, and go to state 11
    FOR        shift, and go to state 12
    COPEN      shift, and go to state 13
    CCLOSE     shift, and go to state 63
    ID         shift, and go to state 14
    WHILE      shift, and go to state 15
    PROCEDURE  shift, and go to state 16
    IF         shift, and go to state 17
    BEG_BLOCK  shift, and go to state 18
    CALL       shift, and go to state 19

    stmt        go to state 21
    exec_array  go to state 22
    beg_block   go to state 23
    proc_call   go to state 24


state 43

    9 stmt: ID ASSIGN . expr SEMICOLON
   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    expr    go to state 64
    term    go to state 36
    factor  go to state 37
    atomic  go to state 38


state 44

   23 stmt: WHILE $@2 . OPEN catomic CLOSE $@3 exec_array

    OPEN  shift, and go to state 65


state 45

   24 $@4: .
   25 stmt: PROCEDURE ID . $@4 exec_array

    $default  reduce using rule 24 ($@4)

    $@4  go to state 66


state 46

   16 stmt: IF OPEN . catomic CLOSE then exec_array
   17     | IF OPEN . catomic CLOSE then exec_array ELSE exec_array
   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID
   43 condition: . expr COMP_OP_lt expr
   44          | . expr COMP_OP_le expr
   45          | . expr COMP_OP_gt expr
   46          | . expr COMP_OP_ge expr
   47          | . expr COMP_OP_ne expr
   48          | . expr COMP_OP_eq expr
   49 catomic: . OPEN condition CLOSE
   50        | . condition

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 67

    expr       go to state 68
    term       go to state 36
    factor     go to state 37
    atomic     go to state 38
    condition  go to state 69
    catomic    go to state 70


state 47

   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID
   54 proc_call: CALL ID . proc_list SEMICOLON
   55 proc_list: .  [SEMICOLON]
   56          | . expr proc_list

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    $default  reduce using rule 55 (proc_list)

    expr       go to state 71
    term       go to state 36
    factor     go to state 37
    atomic     go to state 38
    proc_list  go to state 72


state 48

    8 stmtlist: stmtlist . stmt
    9 stmt: . ID ASSIGN expr SEMICOLON
   10     | . GO expr SEMICOLON
   11     | . JUMP expr SEMICOLON
   12     | . TURN expr SEMICOLON
   14     | . FOR ID ASSIGN expr STEP expr TO expr DO $@1 stmt
   15     | . COPEN stmtlist CCLOSE
   16     | . IF OPEN catomic CLOSE then exec_array
   17     | . IF OPEN catomic CLOSE then exec_array ELSE exec_array
   20     | . exec_array
   23     | . WHILE $@2 OPEN catomic CLOSE $@3 exec_array
   25     | . PROCEDURE ID $@4 exec_array
   26     | . proc_call
   51 exec_array: . beg_block stmtlist end_block
   51           | beg_block stmtlist . end_block
   52 beg_block: . BEG_BLOCK
   53 end_block: . END_BLOCK
   54 proc_call: . CALL ID proc_list SEMICOLON

    GO         shift, and go to state 9
    TURN       shift, and go to state 10
    JUMP       shift, and go to state 11
    FOR        shift, and go to state 12
    COPEN      shift, and go to state 13
    ID         shift, and go to state 14
    WHILE      shift, and go to state 15
    PROCEDURE  shift, and go to state 16
    IF         shift, and go to state 17
    BEG_BLOCK  shift, and go to state 18
    END_BLOCK  shift, and go to state 73
    CALL       shift, and go to state 19

    stmt        go to state 21
    exec_array  go to state 22
    beg_block   go to state 23
    end_block   go to state 74
    proc_call   go to state 24


state 49

   35 factor: SIN factor .

    $default  reduce using rule 35 (factor)


state 50

   36 factor: COS factor .

    $default  reduce using rule 36 (factor)


state 51

   37 factor: SQRT factor .

    $default  reduce using rule 37 (factor)


state 52

   34 factor: PLUS atomic .

    $default  reduce using rule 34 (factor)


state 53

   33 factor: MINUS atomic .

    $default  reduce using rule 33 (factor)


state 54

   27 expr: expr . PLUS term
   28     | expr . MINUS term
   39 atomic: OPEN expr . CLOSE

    PLUS   shift, and go to state 56
    MINUS  shift, and go to state 57
    CLOSE  shift, and go to state 75


state 55

   10 stmt: GO expr SEMICOLON .

    $default  reduce using rule 10 (stmt)


state 56

   27 expr: expr PLUS . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    term    go to state 76
    factor  go to state 37
    atomic  go to state 38


state 57

   28 expr: expr MINUS . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    term    go to state 77
    factor  go to state 37
    atomic  go to state 38


state 58

   30 term: term TIMES . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    factor  go to state 78
    atomic  go to state 38


state 59

   31 term: term DIV . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    factor  go to state 79
    atomic  go to state 38


state 60

   12 stmt: TURN expr SEMICOLON .

    $default  reduce using rule 12 (stmt)


state 61

   11 stmt: JUMP expr SEMICOLON .

    $default  reduce using rule 11 (stmt)


state 62

   14 stmt: FOR ID ASSIGN . expr STEP expr TO expr DO $@1 stmt
   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    expr    go to state 80
    term    go to state 36
    factor  go to state 37
    atomic  go to state 38


state 63

   15 stmt: COPEN stmtlist CCLOSE .

    $default  reduce using rule 15 (stmt)


state 64

    9 stmt: ID ASSIGN expr . SEMICOLON
   27 expr: expr . PLUS term
   28     | expr . MINUS term

    SEMICOLON  shift, and go to state 81
    PLUS       shift, and go to state 56
    MINUS      shift, and go to state 57


state 65

   23 stmt: WHILE $@2 OPEN . catomic CLOSE $@3 exec_array
   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID
   43 condition: . expr COMP_OP_lt expr
   44          | . expr COMP_OP_le expr
   45          | . expr COMP_OP_gt expr
   46          | . expr COMP_OP_ge expr
   47          | . expr COMP_OP_ne expr
   48          | . expr COMP_OP_eq expr
   49 catomic: . OPEN condition CLOSE
   50        | . condition

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 67

    expr       go to state 68
    term       go to state 36
    factor     go to state 37
    atomic     go to state 38
    condition  go to state 69
    catomic    go to state 82


state 66

   25 stmt: PROCEDURE ID $@4 . exec_array
   51 exec_array: . beg_block stmtlist end_block
   52 beg_block: . BEG_BLOCK

    BEG_BLOCK  shift, and go to state 18

    exec_array  go to state 83
    beg_block   go to state 23


state 67

   27 expr: . expr PLUS term
   28     | . expr MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   39       | OPEN . expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID
   43 condition: . expr COMP_OP_lt expr
   44          | . expr COMP_OP_le expr
   45          | . expr COMP_OP_gt expr
   46          | . expr COMP_OP_ge expr
   47          | . expr COMP_OP_ne expr
   48          | . expr COMP_OP_eq expr
   49 catomic: OPEN . condition CLOSE

    SIN     shift, and go to state 26
    COS     shift, and go to state 27
    SQRT    shift, and go to state 28
    FLOAT   shift, and go to state 29
    ID      shift, and go to state 30
    NUMBER  shift, and go to state 31
    PLUS    shift, and go to state 32
    MINUS   shift, and go to state 33
    OPEN    shift, and go to state 34

    expr       go to state 84
    term       go to state 36
    factor     go to state 37
    atomic     go to state 38
    condition  go to state 85


state 68

   27 expr: expr . PLUS term
   28     | expr . MINUS term
   43 condition: expr . COMP_OP_lt expr
   44          | expr . COMP_OP_le expr
   45          | expr . COMP_OP_gt expr
   46          | expr . COMP_OP_ge expr
   47          | expr . COMP_OP_ne expr
   48          | expr . COMP_OP_eq expr

    PLUS        shift, and go to state 56
    MINUS       shift, and go to state 57
    COMP_OP_lt  shift, and go to state 86
    COMP_OP_le  shift, and go to state 87
    COMP_OP_gt  shift, and go to state 88
    COMP_OP_ge  shift, and go to state 89
    COMP_OP_ne  shift, and go to state 90
    COMP_OP_eq  shift, and go to state 91


state 69

   50 catomic: condition .

    $default  reduce using rule 50 (catomic)


state 70

   16 stmt: IF OPEN catomic . CLOSE then exec_array
   17     | IF OPEN catomic . CLOSE then exec_array ELSE exec_array

    CLOSE  shift, and go to state 92


state 71

   27 expr: . expr PLUS term
   27     | expr . PLUS term
   28     | . expr MINUS term
   28     | expr . MINUS term
   29     | . term
   30 term: . term TIMES factor
   31     | . term DIV factor
   32     | . factor
   33 factor: . MINUS atomic
   34       | . PLUS atomic
   35       | . SIN factor
   36       | . COS factor
   37       | . SQRT factor
   38       | . atomic
   39 atomic: . OPEN expr CLOSE
   40       | . NUMBER
   41       | . FLOAT
   42       | . ID
   55 proc_list: .  [SEMICOLON]
   56          | . expr proc_list
   56          | expr . proc_list
